--- a/exp-app/app/router.component.html
+++ b/exp-app/app/router.component.html
@@ -1,7 +1,7 @@
 <h1>Main</h1><router-outlet>
 <nav>
-    <a [routerLink]="['Dashboard']">Dashboard</a>
+    <a [routerLink]="['Dashboard']">Home</a>
     <a [routerLink]="['ListExp']">List of expences</a>
-    <a [routerLink]="['NewExp']">Add new expence</a>
+    <a [routerLink]="['NewExp']">Add new</a>
 </nav>
 </router-outlet>
