Changes made by Svetozar Toskov (svetozar.toskov@telerik.com).

--- a/exp-app/app/components/dashboard/dashboard.html
+++ b/exp-app/app/components/dashboard/dashboard.html
@@ -1,6 +1,7 @@
-<h3>Expenses</h3>
 <div>
     <month-switch></month-switch>
-	<button (click)="onNewExpClicked()">Add New</button>
-   	<button (click)="onNewExpClicked()">Add New</button>
+</div>
+<div>
+    <button (click)="onNewExpClicked()">Add New</button>
+    <button (click)="onListExpsesClicked()">List all</button>
 </div>
